Make styles more concise. Cleanup webflow leftovers (mostly -webkit prefixed css rules). Align images in cards by the bottom of the card. Make card with icons having horizontal layout. Fix wide image overflow on small scren sizes. Prefer dark color scheme in dark theme.

--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,8 @@
 }
 
 .theme-dark {
+  color-scheme: dark;
+
   --colors-background: #1f1f20;
   --colors-surface: #9aa3af14;
   --colors-text-primary: #e5f0fc;
@@ -125,8 +127,7 @@
 
 .page-container {
   max-width: 1008px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   display: block;
 }
 
@@ -192,18 +193,14 @@ h5 {
 }
 
 p {
-  margin-top: var(--sizing-m-default-vertical);
-  margin-bottom: var(--sizing-m-default-vertical);
+  margin: var(--sizing-m-default-vertical) 0;
 }
 
 a {
   color: var(--colors-accent);
-  -webkit-text-stroke-width: 0px;
   text-underline-offset: 0px;
   text-decoration: underline;
-  -webkit-text-decoration-color: var(--colors-accent-b);
   text-decoration-color: var(--colors-accent-b);
-  -webkit-text-decoration-skip-ink: none;
   text-decoration-skip-ink: none;
   text-underline-position: under;
   text-decoration-thickness: 2px;
@@ -224,22 +221,19 @@ a:hover {
 
 ul,
 ol {
-  margin-top: 16px;
-  margin-bottom: 16px;
+  margin: 16px 0;
   padding-left: 40px;
 }
 
 li {
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin: 8px 0;
 }
 
 blockquote {
   font-size: var(--paragraph-m-size);
   line-height: var(--paragraph-m-line-height);
   border-left: 5px solid #e2e2e2;
-  margin-top: 12px;
-  margin-bottom: 12px;
+  margin: 12px 0;
   padding: 12px 40px 12px 36px;
 }
 
@@ -250,32 +244,27 @@ img {
 }
 
 section {
-  padding-top: var(--sizing-m-section-vertical);
-  padding-bottom: var(--sizing-m-section-vertical);
+  padding: var(--sizing-m-section-vertical) 0;
 }
 
 .heading {
   margin-bottom: var(--sizing-m-default-vertical);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  flex-flow: column;
+  flex-direction: column;
   max-width: 672px;
   display: flex;
-}
 
-.heading.first-screen {
-  padding-bottom: 36px;
-}
+  &.first-screen {
+    padding-bottom: 36px;
+  }
 
-.heading.centered {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  &.centered {
+    text-align: center;
+    margin: 0 auto;
+  }
 }
 
 .content {
-  padding-top: var(--sizing-m-section-vertical);
-  padding-bottom: var(--sizing-m-section-vertical);
+  padding: var(--sizing-m-section-vertical) 0;
   max-width: 720px;
 }
 
@@ -319,7 +308,6 @@ section {
   &.pseudo-link,
   .pseudo-link {
     text-decoration: underline;
-    -webkit-text-decoration-color: var(--colors-accent-b);
     text-decoration-color: var(--colors-accent-b);
     text-decoration-thickness: 2px;
   }
@@ -340,7 +328,7 @@ section {
   font-weight: var(--ui-button-font-weight);
   text-align: center;
   border-radius: 12px;
-  grid-column-gap: 8px;
+  gap: 8px;
   justify-content: center;
   align-items: center;
 
@@ -403,14 +391,13 @@ section {
 /* Button groups */
 
 .button-group {
-  grid-column-gap: 12px;
-  flex-flow: wrap;
+  gap: 12px;
+  flex-wrap: wrap;
   align-items: center;
   display: flex;
 
   &.margin-paragraph {
-    margin-top: var(--sizing-m-default-vertical);
-    margin-bottom: var(--sizing-m-default-vertical);
+    margin: var(--sizing-m-default-vertical) 0;
   }
 
   &.centered {
@@ -514,16 +501,14 @@ section {
 }
 
 .image-wide {
-  margin-top: var(--sizing-m-default-vertical);
-  margin-bottom: var(--sizing-m-default-vertical);
+  margin: var(--sizing-m-default-vertical) 0;
   width: 116%;
   max-width: none;
   margin-left: -8%;
 }
 
 .button-group-inline {
-  grid-column-gap: 12px;
-  grid-row-gap: 12px;
+  gap: 12px;
   display: inline-flex;
 }
 
@@ -535,11 +520,10 @@ section {
 .clients-container {
   display: flex;
   gap: 36px;
-  flex-flow: wrap;
+  flex-wrap: wrap;
   place-content: stretch center;
   align-items: center;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 0;
 }
 
 .text-centered {
@@ -560,24 +544,24 @@ section {
   max-width: 672px;
 }
 
+.feature-image {
+  margin-top: auto;
+}
+
 .grid {
   display: grid;
-  margin-top: var(--sizing-m-default-vertical);
-  margin-bottom: var(--sizing-m-default-vertical);
-  grid-column-gap: 12px;
-  grid-row-gap: 12px;
+  margin: var(--sizing-m-default-vertical) 0;
+  gap: 12px;
   grid-template-rows: auto;
   grid-auto-columns: 1fr;
-}
 
-.grid.gap-l {
-  grid-column-gap: 24px;
-  grid-row-gap: 24px;
-}
+  &.gap-l {
+    gap: 24px;
+  }
 
-.grid.gap-xl {
-  grid-column-gap: 60px;
-  grid-row-gap: 60px;
+  &.gap-xl {
+    gap: 60px;
+  }
 }
 
 .columns-2 {
@@ -598,18 +582,25 @@ section {
 
 .card-with-icon {
   border-radius: 24px;
+
+  &.horizontal {
+    display: flex;
+    align-items: flex-start;
+    gap: 24px;
+  }
+
+  &.horizontal .icon {
+    margin-top: 24px;
+  }
 }
 
 .cards-with-icons-container {
-  margin-top: var(--sizing-m-default-vertical);
-  margin-bottom: var(--sizing-m-default-vertical);
-  grid-column-gap: 36px;
-  grid-row-gap: 36px;
+  margin-top: var(--sizing-m-default-vertical) 0;
+  gap: 36px;
   grid-template-rows: auto;
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-columns: 1fr;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 0;
   display: grid;
 }
 
@@ -626,11 +617,11 @@ section {
   padding: var(--sizing-m-card-paddings);
   border: 1px solid var(--colors-border-level-2);
   border-radius: 16px;
-  overflow: scroll;
-}
+  overflow: auto;
 
-.card-code-block.dark {
-  background-color: #2b2b2b;
+  &.dark {
+    background-color: #2b2b2b;
+  }
 }
 
 .nav-link-external {
@@ -704,38 +695,25 @@ section {
 }
 
 .icon-link {
-  grid-column-gap: 6px;
-  grid-row-gap: 6px;
+  gap: 6px;
   color: var(--colors-accent);
   align-items: center;
   text-decoration: none;
   display: flex;
-}
+  
+  &:hover {
+    color: var(--colors-button-primary-bg-hover);
+  }
 
-.icon-link-s {
-  grid-column-gap: 4px;
-  grid-row-gap: 4px;
-  align-items: center;
-  text-decoration: none;
-  text-decoration-thickness: 0;
-  display: flex;
-}
-
-.icon-link-s:hover {
-  color: var(--colors-button-primary-bg-hover);
+  &.s {
+    gap: 4px;
+  }
 }
 
 .flex-block {
-  grid-column-gap: 6px;
-  grid-row-gap: 6px;
+  gap: 6px;
   justify-content: flex-start;
   align-items: center;
-}
-
-.text-link-m {
-  text-decoration: underline;
-  -webkit-text-decoration-color: var(--colors-accent-b);
-  text-decoration-color: var(--colors-accent-b);
 }
 
 /* Footer */
@@ -748,8 +726,7 @@ section {
 }
 
 .footer-menu {
-  grid-column-gap: 16px;
-  grid-row-gap: 16px;
+  gap: 16px;
   grid-template-rows: auto;
   grid-template-columns: 2fr 1fr 1fr;
   grid-auto-columns: 1fr;
