--- a/css/mobile.css
+++ b/css/mobile.css
@@ -46,12 +46,11 @@
   }
 
   .footer {
-    margin-top: 24px;
-    padding-top: 24px;
+    margin: 24px 0;
   }
 
   .button-group {
-    grid-column-gap: 8px;
+    gap: 8px;
   }
 
   .columns-2,
@@ -65,8 +64,7 @@
 
 @media screen and (max-width: 479px) {
   .page-container {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 0 16px;
   }
 
   .hide-on-mobile {
@@ -78,22 +76,19 @@
   }
 
   .button-group-inline.mobile-only {
-    grid-row-gap: 12px;
+    gap: 12px;
     flex-flow: column;
     margin-top: 12px;
     display: flex;
   }
 
   .nav-menu {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding: 0 12px;
   }
 
   .clients-container {
-    grid-column-gap: 24px;
-    grid-row-gap: 24px;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    gap: 24px;
+    padding: 12px 0;
   }
 
   .accordion-toggle {
