--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,8 +1,14 @@
+@media screen and (max-width: 1199px) {
+  .image-wide {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
 @media screen and (max-width: 991px) {
   .page-container {
     max-width: 728px;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding: 0 24px;
   }
 
   .heading.first-screen {
@@ -14,18 +20,12 @@
   }
 
   .content {
-    margin-left: 16px;
-    margin-right: 16px;
+    margin: 0 16px;
   }
 
   .nav-link {
     padding: 16px;
     display: inline-flex;
-  }
-
-  .image-wide {
-    width: 100%;
-    margin-left: 0;
   }
 
   .button-group-inline.hide-on-desktop {
@@ -51,14 +51,14 @@
     }
   }
 
-  .grid.gap-l {
-    grid-column-gap: 16px;
-    grid-row-gap: 16px;
-  }
+  .grid {
+    &.gap-l {
+      gap: 16px;
+    }
 
-  .grid.gap-xl {
-    grid-column-gap: 24px;
-    grid-row-gap: 24px;
+    &.gap-xl {
+      gap: 24px;
+    }
   }
 
   .nav-hamburger {
